API to update node attributes
