# api/interservice/infra_proxy/response/nodes.pb.go
@@ -475,6 +475,72 @@ func (x *Node) GetOverrideAttributes() string {
 	return ""
 }
 
+type UpdateNodeAttributes struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// Node name.
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty" toml:"name,omitempty" mapstructure:"name,omitempty"`
+	// Node attribute type.
+	Type string `protobuf:"bytes,2,opt,name=type,proto3" json:"type,omitempty" toml:"type,omitempty" mapstructure:"type,omitempty"`
+	// Node attributes JSON.
+	Attributes string `protobuf:"bytes,3,opt,name=attributes,proto3" json:"attributes,omitempty" toml:"attributes,omitempty" mapstructure:"attributes,omitempty"`
+}
+
+func (x *UpdateNodeAttributes) Reset() {
+	*x = UpdateNodeAttributes{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_interservice_infra_proxy_response_nodes_proto_msgTypes[6]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *UpdateNodeAttributes) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdateNodeAttributes) ProtoMessage() {}
+
+func (x *UpdateNodeAttributes) ProtoReflect() protoreflect.Message {
+	mi := &file_interservice_infra_proxy_response_nodes_proto_msgTypes[6]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdateNodeAttributes.ProtoReflect.Descriptor instead.
+func (*UpdateNodeAttributes) Descriptor() ([]byte, []int) {
+	return file_interservice_infra_proxy_response_nodes_proto_rawDescGZIP(), []int{6}
+}
+
+func (x *UpdateNodeAttributes) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *UpdateNodeAttributes) GetType() string {
+	if x != nil {
+		return x.Type
+	}
+	return ""
+}
+
+func (x *UpdateNodeAttributes) GetAttributes() string {
+	if x != nil {
+		return x.Attributes
+	}
+	return ""
+}
+
 var File_interservice_infra_proxy_response_nodes_proto protoreflect.FileDescriptor
 
 var file_interservice_infra_proxy_response_nodes_proto_rawDesc = []byte{
@@ -540,6 +606,12 @@ var file_interservice_infra_proxy_response_nodes_proto_rawDesc = []byte{
 	0x2f, 0x0a, 0x13, 0x6f, 0x76, 0x65, 0x72, 0x72, 0x69, 0x64, 0x65, 0x5f, 0x61, 0x74, 0x74, 0x72,
 	0x69, 0x62, 0x75, 0x74, 0x65, 0x73, 0x18, 0x0b, 0x20, 0x01, 0x28, 0x09, 0x52, 0x12, 0x6f, 0x76,
 	0x65, 0x72, 0x72, 0x69, 0x64, 0x65, 0x41, 0x74, 0x74, 0x72, 0x69, 0x62, 0x75, 0x74, 0x65, 0x73,
+	0x22, 0x5e, 0x0a, 0x14, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4e, 0x6f, 0x64, 0x65, 0x41, 0x74,
+	0x74, 0x72, 0x69, 0x62, 0x75, 0x74, 0x65, 0x73, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65,
+	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x12, 0x0a, 0x04,
+	0x74, 0x79, 0x70, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x74, 0x79, 0x70, 0x65,
+	0x12, 0x1e, 0x0a, 0x0a, 0x61, 0x74, 0x74, 0x72, 0x69, 0x62, 0x75, 0x74, 0x65, 0x73, 0x18, 0x03,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x0a, 0x61, 0x74, 0x74, 0x72, 0x69, 0x62, 0x75, 0x74, 0x65, 0x73,
 	0x42, 0x40, 0x5a, 0x3e, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63,
 	0x68, 0x65, 0x66, 0x2f, 0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x70, 0x69,
 	0x2f, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x69, 0x6e,
@@ -559,14 +631,15 @@ func file_interservice_infra_proxy_response_nodes_proto_rawDescGZIP() []byte {
 	return file_interservice_infra_proxy_response_nodes_proto_rawDescData
 }
 
-var file_interservice_infra_proxy_response_nodes_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_interservice_infra_proxy_response_nodes_proto_msgTypes = make([]protoimpl.MessageInfo, 7)
 var file_interservice_infra_proxy_response_nodes_proto_goTypes = []interface{}{
-	(*Nodes)(nil),         // 0: chef.automate.domain.infra_proxy.response.Nodes
-	(*AffectedNodes)(nil), // 1: chef.automate.domain.infra_proxy.response.AffectedNodes
-	(*NodeAttribute)(nil), // 2: chef.automate.domain.infra_proxy.response.NodeAttribute
-	(*DeleteNode)(nil),    // 3: chef.automate.domain.infra_proxy.response.DeleteNode
-	(*UpdateNode)(nil),    // 4: chef.automate.domain.infra_proxy.response.UpdateNode
-	(*Node)(nil),          // 5: chef.automate.domain.infra_proxy.response.Node
+	(*Nodes)(nil),                // 0: chef.automate.domain.infra_proxy.response.Nodes
+	(*AffectedNodes)(nil),        // 1: chef.automate.domain.infra_proxy.response.AffectedNodes
+	(*NodeAttribute)(nil),        // 2: chef.automate.domain.infra_proxy.response.NodeAttribute
+	(*DeleteNode)(nil),           // 3: chef.automate.domain.infra_proxy.response.DeleteNode
+	(*UpdateNode)(nil),           // 4: chef.automate.domain.infra_proxy.response.UpdateNode
+	(*Node)(nil),                 // 5: chef.automate.domain.infra_proxy.response.Node
+	(*UpdateNodeAttributes)(nil), // 6: chef.automate.domain.infra_proxy.response.UpdateNodeAttributes
 }
 var file_interservice_infra_proxy_response_nodes_proto_depIdxs = []int32{
 	2, // 0: chef.automate.domain.infra_proxy.response.Nodes.nodes:type_name -> chef.automate.domain.infra_proxy.response.NodeAttribute
@@ -656,6 +729,18 @@ func file_interservice_infra_proxy_response_nodes_proto_init() {
 				return nil
 			}
 		}
+		file_interservice_infra_proxy_response_nodes_proto_msgTypes[6].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*UpdateNodeAttributes); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -663,7 +748,7 @@ func file_interservice_infra_proxy_response_nodes_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_interservice_infra_proxy_response_nodes_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   7,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
