# components/automate-gateway/api/infra_proxy.pb.swagger.go
@@ -1478,6 +1478,59 @@ func init() {
         ]
       }
     },
+    "/api/v0/infra/servers/{server_id}/orgs/{org_id}/nodes/{name}/attributes": {
+      "put": {
+        "operationId": "InfraProxy_UpdateNodeAttributes",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/chef.automate.api.infra_proxy.response.UpdateNodeAttributes"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "server_id",
+            "description": "Chef Infra Server ID.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "org_id",
+            "description": "Chef organization ID.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "name",
+            "description": "Node name.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/chef.automate.api.infra_proxy.request.UpdateNodeAttributes"
+            }
+          }
+        ],
+        "tags": [
+          "InfraProxy"
+        ]
+      }
+    },
     "/api/v0/infra/servers/{server_id}/orgs/{org_id}/policyfiles": {
       "get": {
         "operationId": "InfraProxy_GetPolicyfiles",
@@ -2112,6 +2165,31 @@ func init() {
         "override_attributes": {
           "type": "object",
           "description": "Node override attributes JSON."
+        }
+      }
+    },
+    "chef.automate.api.infra_proxy.request.UpdateNodeAttributes": {
+      "type": "object",
+      "properties": {
+        "org_id": {
+          "type": "string",
+          "description": "Chef organization ID."
+        },
+        "server_id": {
+          "type": "string",
+          "description": "Chef Infra Server ID."
+        },
+        "name": {
+          "type": "string",
+          "description": "Node name."
+        },
+        "type": {
+          "type": "string",
+          "description": "Node attribute type. (e.g. 'normal', 'default')."
+        },
+        "attributes": {
+          "type": "object",
+          "description": "Node attributes JSON."
         }
       }
     },
@@ -3207,6 +3285,23 @@ func init() {
         "name": {
           "type": "string",
           "description": "Node name."
+        }
+      }
+    },
+    "chef.automate.api.infra_proxy.response.UpdateNodeAttributes": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "Node name."
+        },
+        "type": {
+          "type": "string",
+          "description": "Node attribute type."
+        },
+        "attributes": {
+          "type": "string",
+          "description": "Node attributes JSON."
         }
       }
     },
